--- a/src/components/pages/menus/Products/snacks/snacks.css
+++ b/src/components/pages/menus/Products/snacks/snacks.css
@@ -4,6 +4,10 @@
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
 }
 
+.snack-container{
+    width: 100vw;
+}
+
 .snack-card:hover svg {
     transition: .4s;
     stroke: var(--blue-gray)!important;
